<resources>
    <string name="app_name">Wingit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_password_match">The passwords do not match.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_age">This age is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">MapActivity</string>
</resources>
